@@ -5,9 +5,10 @@ English Dolibarr ChangeLog
 ***** ChangeLog for 3.2 compared to 3.1 *****
 WARNING: PHP lower than 5.x are no more supported.
 WARNING: Because of a major datastructure change onto supplier prices tabkes, be aware
-to make a backup of your datbase before making upgrade.
+to make a backup of your database before making upgrade.
 
 For users:
+- New: Can use personalized fields of products/services.
 - New: Can attach files on social contributions.
 - New: Show payments terms and conditions onto muscadet template.
 - New: Can open back a closed commercial proposal.
